MDEV-8482 mysql-test - main.func_encrypt fails if FIPS=1

* check for openssl errors in DES_ENCRYPT/DES_DECRYPT
* disable the test when DES doesn't work
* also disable main.func_des_encrypt